re-design page; add contact me modal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + Vue</title>
 </head>
 
-<body class="bg-slate-800 text-gray-200">
+<body class="bg-neutral-900 font-sans text-blue-100">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
